[package]
name = "benchmark-rs"
version = "0.1.0"
edition = "2018"
description = "Simple benchmark tool in Rust for BCF Lab blockchains."

[dependencies]
ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
tokio = { version = "1.32", features = ["full"] }
serde_json = "1.0.107"
serde = "1.0.107"
hex = "0.4.3"
eyre = "0.6.5"